// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render default options 1`] = `
<div
  className="layerstree-node-content__options layerstree-node-content__options--desktop"
>
  <span
    className="layerstree-node-content__options__overflow--shown"
  >
    <button
      type="button"
    >
      Extent this layer
    </button>
  </span>
  <span
    className="layerstree-node-content__options__overflow--shown"
  >
    <span
      className="bp3-popover-wrapper layerNode__tooltip options"
    >
      <span
        className="bp3-popover-target"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <button
          alt="Opacité"
          className="bp3-button bp3-minimal layerstree-node-content__options__button"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          tabIndex={0}
          title="Opacité"
          type="button"
        >
          <span
            className="bp3-icon bp3-icon-eye-open"
            icon="eye-open"
          >
            <svg
              data-icon="eye-open"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                eye-open
              </desc>
              <path
                d="M8.002 7.003a1.003 1.003 0 000 2.005 1.003 1.003 0 000-2.005zm7.988.972v-.02-.01-.02-.02a.675.675 0 00-.17-.36c-.509-.673-1.118-1.264-1.737-1.806-1.328-1.173-2.846-2.155-4.523-2.546a6.702 6.702 0 00-2.925-.06c-.889.18-1.738.541-2.546.992C2.84 4.837 1.692 5.81.694 6.902c-.18.211-.36.411-.53.632a.742.742 0 000 .932c.51.672 1.119 1.264 1.738 1.805 1.328 1.173 2.846 2.156 4.523 2.547.968.23 1.947.24 2.925.04.889-.18 1.738-.542 2.546-.993 1.248-.712 2.397-1.684 3.395-2.777.18-.2.37-.411.54-.632.09-.1.149-.23.169-.36v-.02-.02-.01-.02-.03c0-.01-.01-.01-.01-.02zm-7.988 3.038a2.998 2.998 0 01-2.995-3.008 2.998 2.998 0 012.995-3.008 2.998 2.998 0 012.996 3.008 2.998 2.998 0 01-2.996 3.008z"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="bp3-button-text"
          >
            Opacité
          </span>
        </button>
      </span>
    </span>
  </span>
</div>
`;

exports[`should render no tooltip if empty widget empty 1`] = `
<div
  className="layerstree-node-content__options layerstree-node-content__options--desktop"
>
  <span
    className="layerstree-node-content__options__overflow--shown"
  >
    <button
      type="button"
    >
      Extent this layer
    </button>
  </span>
  <span
    className="layerstree-node-content__options__overflow--shown"
  >
    <span
      className="bp3-popover-wrapper layerNode__tooltip options"
    >
      <span
        className="bp3-popover-target"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <button
          alt="Opacité"
          className="bp3-button bp3-minimal layerstree-node-content__options__button"
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          tabIndex={0}
          title="Opacité"
          type="button"
        >
          <span
            className="bp3-icon bp3-icon-eye-open"
            icon="eye-open"
          >
            <svg
              data-icon="eye-open"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <desc>
                eye-open
              </desc>
              <path
                d="M8.002 7.003a1.003 1.003 0 000 2.005 1.003 1.003 0 000-2.005zm7.988.972v-.02-.01-.02-.02a.675.675 0 00-.17-.36c-.509-.673-1.118-1.264-1.737-1.806-1.328-1.173-2.846-2.155-4.523-2.546a6.702 6.702 0 00-2.925-.06c-.889.18-1.738.541-2.546.992C2.84 4.837 1.692 5.81.694 6.902c-.18.211-.36.411-.53.632a.742.742 0 000 .932c.51.672 1.119 1.264 1.738 1.805 1.328 1.173 2.846 2.156 4.523 2.547.968.23 1.947.24 2.925.04.889-.18 1.738-.542 2.546-.993 1.248-.712 2.397-1.684 3.395-2.777.18-.2.37-.411.54-.632.09-.1.149-.23.169-.36v-.02-.02-.01-.02-.03c0-.01-.01-.01-.01-.02zm-7.988 3.038a2.998 2.998 0 01-2.995-3.008 2.998 2.998 0 012.995-3.008 2.998 2.998 0 012.996 3.008 2.998 2.998 0 01-2.996 3.008z"
                fillRule="evenodd"
              />
            </svg>
          </span>
          <span
            className="bp3-button-text"
          >
            Opacité
          </span>
        </button>
      </span>
    </span>
  </span>
</div>
`;

exports[`should render with properties 1`] = `
Array [
  <div
    className="layerstree-node-content__options layerstree-node-content__options--desktop"
  >
    <span
      className="layerstree-node-content__options__overflow--shown"
    >
      <button
        type="button"
      >
        Extent this layer
      </button>
    </span>
    <span
      className="layerstree-node-content__options__overflow--shown"
    >
      <span
        className="bp3-popover-wrapper layerstree-node-content__options__tooltip widgets"
      >
        <span
          className="bp3-popover-target"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <button
            alt="close widget"
            className="bp3-button bp3-minimal layerstree-node-content__options__button layerstree-node-content__options__button--active"
            onClick={true}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            tabIndex={0}
            title="widget"
            type="button"
          >
            <span
              className="bp3-icon bp3-icon-selection"
              icon="selection"
            >
              <svg
                data-icon="selection"
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <desc>
                  selection
                </desc>
                <path
                  d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-9C6.34 5 5 6.34 5 8s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                  fillRule="evenodd"
                />
              </svg>
            </span>
            <span
              className="bp3-button-text"
            >
              widget
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      className="bp3-popover-wrapper"
    >
      <span
        className="bp3-popover-target"
        onClick={[Function]}
      >
        <span
          className="bp3-popover-wrapper layerNode__tooltip options"
        >
          <span
            className="bp3-popover-target"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              alt="close options"
              className="bp3-button bp3-minimal layerstree-node-content__options__button layerstree-node-content__options__button--more"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              title="options"
              type="button"
            >
              <span
                className="bp3-icon bp3-icon-more"
                icon="more"
              >
                <svg
                  data-icon="more"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    more
                  </desc>
                  <path
                    d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>,
  <p>
    FiltersPanel
  </p>,
]
`;
